--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.16.1",
     "@radix-ui/react-icons": "^1.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
     "next": "14.2.4",
+    "prisma": "^5.16.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
