--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
- 
-    "@prisma/client": "^5.16.1",
-
     "@portabletext/react": "^3.0.18",
+    "@prisma/client": "^5.16.1",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
-
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
@@ -22,9 +20,9 @@
     "framer-motion": "^11.2.12",
     "lucide-react": "^0.399.0",
     "next": "14.2.4",
-    "prisma": "^5.16.1",
     "next-sanity": "^9.4.2",
     "next-themes": "^0.3.0",
+    "prisma": "^5.16.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
