--- a/package.json
+++ b/package.json
@@ -18,3 +18,22 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
+    "lucide-react": "^0.399.0",
+    "next": "14.2.4",
+    "next-sanity": "^9.4.2",
+    "next-themes": "^0.3.0",
+    "prisma": "^5.16.1",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-icons": "^5.2.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.4"
+  }
+}
