Sign-up completed
All the changes are:-
1) Added Shadcn componets
2)Added signup form
3)Added signup,verify,check username endpoints
4)Configured nextauth
5)Added DbConnection
6)Added middleware
7)Added zod and signin,signup and verifySchema

--- a/components.json
+++ b/components.json
@@ -1,12 +1,12 @@
 {
   "$schema": "https://ui.shadcn.com/schema.json",
-  "style": "new-york",
+  "style": "default",
   "rsc": true,
   "tsx": false,
   "tailwind": {
     "config": "tailwind.config.js",
     "css": "app/globals.css",
-    "baseColor": "stone",
+    "baseColor": "slate",
     "cssVariables": true,
     "prefix": ""
   },
