--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.4",
-    "typescript": "5.5.3"
+    "tailwindcss": "^3.4.4"
   }
 }
