--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-, "middleware.ts"  ],
+, "middleware.ts", "app/(auth)/sign-in/page.jsx"  ],
   "exclude": [
     "node_modules"
   ]
