--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "seed": "node prisma/seed.js"
   },
   "dependencies": {
+    "@ewanmellor/brackets-viewer": "^1.6.911",
     "@hookform/resolvers": "^3.7.0",
     "@portabletext/react": "^3.0.18",
     "@prisma/client": "^5.16.1",
@@ -25,6 +26,8 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "brackets-manager": "^1.6.4",
+    "brackets-viewer": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
