--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,36 +1,8 @@
-Documentation (.MD):
+Backend:
 - changed-files:
-  - any-glob-to-any-file: docs/**
+  - any-glob-to-any-file: [ 'app/**', 'lib/**', 'model/**', 'prisma/**', 'context/**', 'types/**' ]
 
-Blogs (Frontend):
+Frontend:
 - changed-files:
-  - any-glob-to-any-file: app/blogs/**
-
-Assets (Frontend):
-- changed-files:
-  - any-glob-to-any-file: app/assets/**
-
-Games (Frontend):
-- changed-files:
-  - any-glob-to-any-file: 'app/games/*'
-
-Tournaments (Frontend):
-- changed-files:
-  - any-glob-to-any-file: 'app/tournaments/*'
-
-API (Backend):
-- changed-files:
-  - any-glob-to-any-file: 'app/api/*'
-
-Components (Frontend):
-- changed-files:
-  - any-glob-to-any-file: 'components/*'
-
-Next-Auth Types (Auth):
-- changed-files:
-  - any-glob-to-any-file: 'types/*'
-
-Model (Backend):
-- changed-files:
-  - any-glob-to-any-file: 'model/*'
+  - any-glob-to-any-file: [ 'components/**', '@/**', 'public/**' ]
 
