--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["src/*"]
     }
-  }
+  },
+  "exclude": ["node_modules", "next.config.js"]
 }
