--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@tabler/icons-react": "^3.11.0",
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
@@ -31,8 +32,9 @@
     "brackets-viewer": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "dotenv": "^16.4.5",
-    "framer-motion": "^11.2.12",
+    "framer-motion": "^11.3.17",
     "lucide-react": "^0.399.0",
     "mongoose": "^8.4.4",
     "next": "14.2.4",
@@ -45,7 +47,7 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "resend": "^3.4.0",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
     "zod": "^3.23.8"
