--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@tabler/icons": "^1.115.0",
     "@tabler/icons-react": "^3.11.0",
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.7.2",
