--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.7.0",
+    "@material-tailwind/react": "^2.1.9",
     "@portabletext/react": "^3.0.18",
     "@prisma/client": "^5.16.1",
     "@radix-ui/react-dialog": "^1.1.1",
