save to db feature for brackets

--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@tabler/icons-react": "^3.11.0",
     "@types/bcrypt": "^5.0.2",
-    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -32,6 +31,7 @@
     "cobe": "^0.6.3",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.19",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.399.0",
     "mongoose": "^8.4.4",
     "next": "14.2.4",
@@ -45,7 +45,6 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "resend": "^3.4.0",
-    "swr": "^2.2.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
