--- a/example.env
+++ b/example.env
@@ -2,3 +2,4 @@ DATABASE_URL="Mongo_DB_Connection_String/DB_Name"
 MONGODB_URL=''
 RESEND_API_KEY=''
 NEXTAUTH_SECRET=''
+NEWS_URL='https://newsapi.org/v2/everything?q=Esports&sortBy=publishedAt&language=en&apiKey=08573ce9567742189e61fdc2618a482b'
