--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.7.0",
+    "@material-tailwind/react": "^2.1.9",
     "@portabletext/react": "^3.0.18",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -21,8 +22,10 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@tabler/icons": "^1.115.0",
     "@tabler/icons-react": "^3.11.0",
-    "axios": "^1.7.2",
+    "@types/bcrypt": "^5.0.2",
+    "axios": "^1.7.3",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -30,6 +33,7 @@
     "cobe": "^0.6.3",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.19",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.399.0",
     "mongoose": "^8.4.4",
     "next": "14.2.4",
@@ -37,13 +41,11 @@
     "next-sanity": "^9.4.2",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^1.6.12",
-    "prisma": "^5.16.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "resend": "^3.4.0",
-    "swr": "^2.2.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
