--- a/package.json
+++ b/package.json
@@ -53,9 +53,12 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
+    "@types/node": "22.5.0",
+    "@types/react": "18.3.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "typescript": "5.5.4"
   }
 }
