--- a/example.env
+++ b/example.env
@@ -1,5 +1,6 @@
-DATABASE_URL="Mongo_DB_Connection_String/DB_Name"
+DATABASE_URL=""
 MONGODB_URL=''
 RESEND_API_KEY=''
 NEXTAUTH_SECRET=''
-NEWS_URL='https://newsapi.org/v2/everything?q=Esports&sortBy=publishedAt&language=en&apiKey=08573ce9567742189e61fdc2618a482b'
+NEXTAUTH_URL=''
+NEWS_URL=''
