--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-loading-skeleton": "^3.4.0",
     "resend": "^3.4.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
