--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^11.3.31",
     "next": "14.2.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-loading-skeleton": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
