--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
-<<<<<<< HEAD
-  "name": "sanity-frontend",
-=======
   "name": "sanity",
->>>>>>> c64d4052a8a28cb66fc7ed964cea672fd032d412
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,7 +8,6 @@
     "start": "next start",
     "lint": "next lint"
   },
-<<<<<<< HEAD
   "dependencies": {
     "framer-motion": "^11.3.31",
     "next": "14.2.7",
@@ -28,8 +23,7 @@
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-=======
+    "typescript": "^5",
   "prisma": {
     "seed": "node prisma/seed.js"
   },
@@ -84,6 +78,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.4",
     "typescript": "5.5.4"
->>>>>>> c64d4052a8a28cb66fc7ed964cea672fd032d412
   }
+}
 }
