--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build", 
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -13,7 +13,7 @@
     "@material-tailwind/react": "2.1.9",
     "@portabletext/react": "3.0.18",
     "@radix-ui/react-dialog": "1.1.1",
-    "@radix-ui/react-dropdown-menu": "2.1.1", 
+    "@radix-ui/react-dropdown-menu": "2.1.1",
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/react-label": "2.1.0",
     "@radix-ui/react-select": "2.1.1",
@@ -44,6 +44,7 @@
     "react-icons": "5.2.1",
     "react-loading-skeleton": "3.4.0",
     "resend": "3.4.0",
+    "sharp": "^0.33.5",
     "tailwind-merge": "2.4.0",
     "tailwindcss-animate": "1.0.7",
     "usehooks-ts": "3.1.0",
