--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
     "mongoose": "8.4.4",
     "next": "14.2.4",
     "next-auth": "4.24.7",
-    "next-sanity": "9.4.2",
+    "next-sanity": "^9.8.27",
     "next-themes": "0.3.0",
     "nextjs-toploader": "1.6.12",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.0",
+    "react-dom": "18.3.0",
     "react-hook-form": "7.52.1",
     "react-icons": "5.2.1",
     "react-loading-skeleton": "3.4.0",
