--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@hookform/resolvers": "3.7.0",
     "@material-tailwind/react": "2.1.9",
     "@portabletext/react": "3.0.18",
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "1.1.1",
     "@radix-ui/react-dropdown-menu": "2.1.1",
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/react-label": "2.1.0",
+    "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-select": "2.1.1",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "1.1.0",
     "@radix-ui/react-toast": "1.2.1",
     "@tabler/icons": "1.115.0",
