--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,15 @@
-DATABASE_URL=""
-MONGODB_URL=''
+DATABASE_URL=''
 RESEND_API_KEY=''
 NEXTAUTH_SECRET=''
 NEXTAUTH_URL=''
 NEWS_URL=''
 
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
+
+# For those who working on /blogs page
 SANITY_STUDIO_PROJECT_ID=''
 SANITY_STUDIO_DATASET=''
