--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-hook-form": "7.52.1",
     "react-icons": "5.2.1",
     "react-loading-skeleton": "3.4.0",
+    "react-spinners": "^0.15.0",
     "resend": "3.4.0",
     "sharp": "^0.33.5",
     "tailwind-merge": "2.4.0",
