--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@radix-ui/react-dropdown-menu": "2.1.1",
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/react-label": "2.1.0",
-    "@radix-ui/react-select": "2.1.1",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "1.1.0",
     "@radix-ui/react-toast": "1.2.1",
     "@tabler/icons": "1.115.0",
@@ -39,6 +39,7 @@
     "next-sanity": "^9.8.27",
     "next-themes": "0.3.0",
     "nextjs-toploader": "1.6.12",
+    "query-string": "^9.1.1",
     "react": "18.3.0",
     "react-dom": "18.3.0",
     "react-hook-form": "7.52.1",
