--- a/package.json
+++ b/package.json
@@ -57,18 +57,21 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@tailwindcss/typography": "0.5.13",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "20.11.24",
     "@types/react": "18.2.61",
     "@types/react-dom": "18.2.19",
     "@types/react-reconciler": "0.28.8",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.4",
+    "globals": "^15.14.0",
     "postcss": "8.4.35",
     "prettier": "3.4.2",
     "tailwindcss": "3.4.4",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "typescript-eslint": "^8.18.1"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
