--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "@types/react": "18.2.61",
     "@types/react-dom": "18.2.19",
     "@types/react-reconciler": "0.28.8",
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
+    "@typescript-eslint/parser": "^8.18.1",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.4",
     "globals": "^15.14.0",
