--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "3.7.0",
+    "@hookform/resolvers": "^3.7.0",
     "@material-tailwind/react": "2.1.9",
     "@portabletext/react": "3.0.18",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "1.1.1",
     "@radix-ui/react-dropdown-menu": "2.1.1",
     "@radix-ui/react-icons": "1.3.0",
-    "@radix-ui/react-label": "2.1.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-select": "2.1.1",
     "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slot": "1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "1.2.1",
     "@tabler/icons": "1.115.0",
     "@tabler/icons-react": "3.11.0",
@@ -44,7 +44,7 @@
     "nextjs-toploader": "1.6.12",
     "react": "18.3.0",
     "react-dom": "18.3.0",
-    "react-hook-form": "7.52.1",
+    "react-hook-form": "^7.52.1",
     "react-icons": "5.2.1",
     "react-loading-skeleton": "3.4.0",
     "react-spinners": "^0.15.0",
@@ -53,7 +53,7 @@
     "tailwind-merge": "2.4.0",
     "tailwindcss-animate": "1.0.7",
     "usehooks-ts": "3.1.0",
-    "zod": "3.23.8"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/typography": "0.5.13",
