--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "next-sanity": "^9.8.27",
     "next-themes": "0.3.0",
     "nextjs-toploader": "1.6.12",
+    "query-string": "^9.1.1",
     "react": "18.3.0",
     "react-dom": "18.3.0",
     "react-hook-form": "^7.52.1",
@@ -70,8 +71,9 @@
     "@types/react-reconciler": "0.28.8",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
     "@typescript-eslint/parser": "^8.18.1",
-    "eslint": "^8.57.1",
+    "eslint": "^9.17.0",
     "eslint-config-next": "14.2.4",
+    "globals": "^15.14.0",
     "husky": "^9.1.7",
     "postcss": "8.4.35",
     "prettier": "3.4.2",
