--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "@typescript-eslint/eslint-plugin": "^8.18.1",
     "@typescript-eslint/parser": "^8.18.1",
     "eslint": "^9.17.0",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "^15.1.2",
     "globals": "^15.14.0",
     "husky": "^9.1.7",
     "postcss": "8.4.35",
