added the resend contact email & fixed lint

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@radix-ui/react-select": "2.1.1",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-toast": "1.2.1",
+    "@radix-ui/react-toast": "^1.2.4",
     "@sanity/image-url": "^1.1.0",
     "@tabler/icons": "1.115.0",
     "@tabler/icons-react": "3.11.0",
@@ -52,6 +52,7 @@
     "react": "18.3.0",
     "react-dom": "18.3.0",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "5.2.1",
     "react-loading-skeleton": "3.4.0",
     "react-spinners": "^0.15.0",
@@ -74,6 +75,7 @@
     "@typescript-eslint/parser": "^8.18.1",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.2",
+    "eslint-plugin-next": "^0.0.0",
     "globals": "^15.14.0",
     "husky": "^9.1.7",
     "postcss": "8.4.35",
