--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,15 @@ NEXTAUTH_SECRET=''
 NEXTAUTH_URL=''
 NEWS_URL=''
 
+# For /teams page
+NEXT_PUBLIC_BASE_URL=''
+
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
 
-# For those who working on /blogs page
+# For /blogs page
 SANITY_STUDIO_PROJECT_ID=''
 SANITY_STUDIO_DATASET=''
