--- a/package.json
+++ b/package.json
@@ -42,11 +42,11 @@
     "clsx": "2.1.1",
     "cobe": "0.6.3",
     "dotenv": "16.4.5",
-    "framer-motion": "11.3.19",
+    "framer-motion": "^11.3.19",
     "html2canvas": "1.4.1",
     "lucide-react": "0.399.0",
     "mongoose": "8.8.3",
-    "next": "^15.1.2",
+    "next": "^15.1.3",
     "next-auth": "4.24.11",
     "next-sanity": "^9.8.27",
     "next-themes": "0.3.0",
@@ -58,6 +58,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "5.2.1",
     "react-loading-skeleton": "3.4.0",
+    "react-router-dom": "^7.1.1",
     "react-spinners": "^0.15.0",
     "resend": "3.4.0",
     "sharp": "^0.33.5",
