--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tabler/icons": "1.115.0",
     "@tabler/icons-react": "3.11.0",
     "@types/bcrypt": "5.0.2",
+    "@vercel/analytics": "^1.4.1",
     "axios": "1.7.4",
     "axios-retry": "^4.5.0",
     "bcrypt": "5.1.1",
