--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "clsx": "2.1.1",
     "cobe": "0.6.3",
     "dotenv": "16.4.5",
-    "framer-motion": "^11.3.19",
+    "framer-motion": "^11.15.0",
     "html2canvas": "1.4.1",
     "lucide-react": "0.399.0",
     "mongoose": "8.8.3",
@@ -63,6 +63,7 @@
     "react-spinners": "^0.15.0",
     "resend": "3.4.0",
     "sharp": "^0.33.5",
+    "simplex-noise": "^4.0.3",
     "tailwind-merge": "2.4.0",
     "tailwindcss-animate": "1.0.7",
     "usehooks-ts": "3.1.0",
