chore: update example env

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,25 @@
+// MongoDB URI
 DATABASE_URL=''
+
+// from resend.com
 RESEND_API_KEY=''
+
 NEXTAUTH_SECRET=''
 NEXTAUTH_URL=''
+
+// from gnews.io
 NEWS_URL=''
 
-# For /teams page
 NEXT_PUBLIC_BASE_URL=''
 
+// from google cloud console
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
+// from discord developer portal -> after creating an application
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
 
-# For /blogs page
+# from sanity.io
 SANITY_STUDIO_PROJECT_ID=''
 SANITY_STUDIO_DATASET=''
