--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "resend": "3.4.0",
     "sharp": "^0.33.5",
     "simplex-noise": "^4.0.3",
+    "sonner": "^1.7.1",
     "tailwind-merge": "2.4.0",
     "tailwindcss-animate": "1.0.7",
     "usehooks-ts": "3.1.0",
